tests/snapshots/run_wpt_conformance__litert_reduceLogSumExp_float16_3D_tensor_options_keepDimensions_false.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_log_sum_exp.https.any.js reduceLogSumExp float16 3D tensor options.keepDimensions=false, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: ReduceLogSumExp { input: 0, options: Some(MLReduceOptions { label: "", axes: None, keep_dimensions: false }), outputs: [1] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reduceLogSumExpInput: f16[2, 3, 4];
  }

  nodes {
    [reduceLogSumExpOutput] = reduceLogSumExp(reduceLogSumExpInput, axes=null, keepDimensions=false, label="");
  }

  outputs { reduceLogSumExpOutput; }
}
